--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -737,8 +737,9 @@ tbody.collapse.in { display: table-row-group; }
 
 .content { padding: 48px 0; }
 .content .content-inner { margin: 0 auto; max-width: 768px; text-align: center; position: relative; z-index: 50; }
-.content h3 { margin-bottom: 12px; font-size: 15px; line-height: 24px; font-weight: bold; color: #999999; }
+.content h3 { margin-bottom: 6px; font-size: 15px; line-height: 24px; font-weight: bold; color: #999999; }
 .content p { font-size: 16px; line-height: 27px; }
+.content a { text-decoration: underline; }
 .content .notice { margin-top: 24px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 24px; font-size: 15px; line-height: 24px; font-weight: bold; }
 .content .divide:before { content: ""; display: block; width: 25%; margin: 48px auto; border-top: 2px solid #eeeeee; }
 .content .action { margin-bottom: 48px; }
